# 15PuzzleSolverAPI

./: 15PuzzleSolverAPI.sln  CMakeLists.txt  README.md
aisearch_distributed/: aisearch_distributed.vcxitems
aisearch_dll/: aisearch.cpp  aisearch.h  aisearch_dll.vcxproj  aisearch_dll.vcxproj.filters  dllmain.cpp
aisearch_lib/: aisearch.cpp  aisearch.h  aisearch_lib.vcxproj  dllmain.cpp
aisearch_linux/: aisearch.h  aisearch_linux.vcxproj  main.cpp
aisearch_shared/: aisearch_shared.vcxproj
aisearch_xplatform/: CMakeLists.txt  aisearch_xplatform.cpp  aisearch_xplatform.h
testAPI/: AiSearchAPI.csproj  Dockerfile  Program.cs  Startup.cs
testAPI/Controllers/: fifteenPuzzleController.cs
testAPI/Models/: PuzzleModel.cs  PuzzlePath.cs
testAPI/Properties/: launchSettings.json
