# CMakeList.txt : CMake project for aisearch_xplatform, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (aisearch_xplatform "aisearch_xplatform.cpp" "aisearch_xplatform.h")

# TODO: Add tests and install targets if needed.
